# quiz-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-full.yaml  docker-compose.yaml  main.py  pyproject.toml  read_questions.py  settings.py  state_manager.py  tg_bot.py  utils.py  vk_bot.py
