[project]
name = "devman-quiz-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "python-decouple>=3.8",
    "redis>=5.2.1",
    "vkbottle>=4.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
